--- a/FckKetReg/FckKetReg.csproj
+++ b/FckKetReg/FckKetReg.csproj
@@ -82,10 +82,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Models\Term.cs" />
-    <Compile Include="RequestManager.cs">
+    <Compile Include="CookiedWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Models\Term.cs" />
+    <Compile Include="RegistrationScheduler.cs" />
+    <Compile Include="RequestManager.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -125,7 +127,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
